# X11KeboardLayouts

./: .gitignore  CMakeLists.txt  Config.h  README.md  TODO.md  Widget.cpp  Widget.h  build.sh  main.cpp  qLang  run.sh  test.sh  xmappingnotify  xmappingnotify.cpp
Data/: us.xpm
XMmappingNotify/: CMakeLists.txt  gen_eclipse.sh  xmappingnotify.cpp
XMmappingNotify/Data/: ua.xpm
bLang/: run.sh
qLang/: CMakeLists.txt  Config.h  Widget.cpp  Widget.h  main.cpp  qLang  widget.cpp  widget.h  widget.ui
xLang/: .gitignore  CMakeLists.txt  main.cpp
